--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "car_rent_app",
-  "homepage": "http://safwan72.github.io/car_rental",
+  "homepage": "http://safwan72.github.io/car_rent_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,8 +25,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
